# FDPinHelper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: res.qrc
assets/device/: FDP3P7.xml
assets/icon/: mac_icon.icns
assets/translation/: FDPinHelper_zh_CN.ts
include/: AutoAssignHandler.h  Config.h.in  DevicePinReader.h  ExportHandler.h  ModulesSelectDialog.h  PinHelper.h  PinTableWidget.h  RegExpPortExtract.h  VerilogPort.h
src/: AutoAssignHandler.cc  DevicePinReader.cc  ExportHandler.cc  ModulesSelectDialog.cc  PinHelper.cc  PinTableWidget.cc  RegExpPortExtract.cc  main.cc
